[GTK] AcceleratedSurfaceDMABuf.cpp does not build on i386 https://bugs.webkit.org/show_bug.cgi?id=254828

Reviewed by Adrian Perez de Castro.

* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.cpp:
(WebKit::AcceleratedSurfaceDMABuf::clientResize):

Canonical link: https://commits.webkit.org/262476@main